--- a/roloboxd/drum_configs/tac.strings
+++ b/roloboxd/drum_configs/tac.strings
@@ -1,4 +1,84 @@
+
+
+Potsdam Hbf
+
+Nicht einsteigen
+
+Alexanderplatz
+Ahrensfelde
+Anhalter Bahnhof
+Baumschulenweg
+Bernau
+Birkenwerder
+Blankenburg
+Blankenfelde
+Buch
+Bundesplatz
+Charlottenburg
+Erkner
+Falkensee
+Friedrichshagen
+Friedrichstrasse
+Schoenefeld
+Frohnau
+Nordkreuz
+Greifswalder Strasse
+Grunewald
+Gruenau
+Halensee
+Ostbahnhof
+Hermannstrasse
+Hermsdorf
+Hennigsdorf
+Hoppegarten (Mark)
+Karlshorst
+Koenigs Wusterhausen
+Koepenick
+Lichtenberg
+Lichtenrade
+Lichterfelde Sued
+Mahlow
+Mahlsdorf
+Marienfelde
+Nordbahnhof
+Olympiastadion
+Ostkreuz
+Suedkreuz
+Pichelsberg
+Potsdam Hbf
+Potsdamer Platz
+Putlitzstrasse
+Rangsdorf
+Spandau
+Schoeneberg
+Schoeneweide
+Schoenholz
+Sellheimbruecke
+Spindlersfeld
+Rathaus Steglitz
+Strausberg
+Strausberg Nord
+Stresow
+Tegel
+Tempelhof
+Wannsee
+Warschauer Strasse
+Westend
+Westkreuz
+Zehlendorf
+Zoologischer Garten
+Zeuthen
+Friedrichsfelde Ost
+Fredersdorf
+Hegermuehler
+Marzahn
+Neukoelln
+Springpfuhl
+Tiergarten
+Treptower Park
+Wartenberg
 Wuhletal
+
 
 
 
