--- a/roloboxd/drum_configs/tic.strings
+++ b/roloboxd/drum_configs/tic.strings
@@ -1,4 +1,5 @@
 Kurzzug
+Ersatzverkehr
 Zugverkehr unterbrochen
 Zugverkehr unregelmaessig
 
@@ -27,7 +28,6 @@ Birkenstein
 
 
 
-
 Ostkreuz, Berlin Hbf, Kurzzug
 Ostkreuz, Alexanderplatz, Kurzzug
 Ostkreuz, Ostbahnhof, Kurzzug
@@ -36,4 +36,45 @@ Lichtenberg, Ostkreuz, Kurzzug
 Friedrichsfelde Ost, Lichtenberg, Kurzzug
 Wuhletal, Friedrichsfelde Ost, Kurzzug
 Hoppegarten, Strausberg, Kurzzug
+Hoppegarten, Fredersdorf, Kurzzug
+Birkenstein, Kurzzug
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Auf diesem Gleis kein Zugverkehr
+Pendelverkehr
+In die letzten 4 Wagen bitte nicht einsteigen
+Zug faehrt zuerst
+Ansage beachten
